fix broken tests after bootstrap data refactoring